[metadata]
name = ar-hmmlearn
version = attr: src.ar_hmmlearn.__version__
author = Carlos Loza
author_email = lozanac@labcorp.com
url = https://github.com/carlosloza/ar_hmmlearn
description = Extension of pythons hmmlearn library to handle autoregressive observation models
long_description = file: README.md
long_description_content_type = text/markdown
keywords = autoregressive
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
platforms = any

[options]
zip_safe = True
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    hmmlearn>=0.2.8

[options.extras_require]
test =
    pytest
    pytest-cov

[options.packages.find]
where=src